tests/experimental/error/test_automaton_state.lus
-- ------------------------------------------------------------
-- Automaton
-- ------------------------------------------------------------

node Aut (cond0 : bool; cond1 : bool; in : int) returns (o : int)
let
  automaton
    state ST1:
    var k: int;
    let
      k = if in < 0 then in else -in;
      o = -2 * (k + last o);
    tel
    until if cond1 resume STX ; -- STX is undeclared

    initial state ST0: 
    unless if cond0 restart ST1;
    var k: int;
    let
     k = if in < 0 then -in else in;
     o = k + 1;
    tel
 returns o;
tel